@@ -563,6 +563,8 @@ void ImGui_ImplDX10_Shutdown()
 void ImGui_ImplDX10_NewFrame()
 {
     ImGui_ImplDX10_Data* bd = ImGui_ImplDX10_GetBackendData();
+    IM_ASSERT(bd != NULL && "Did you call ImGui_ImplDX10_Init()?");
+
     if (!bd->pFontSampler)
         ImGui_ImplDX10_CreateDeviceObjects();
 }
