@@ -579,6 +579,8 @@ void ImGui_ImplDX11_Shutdown()
 void ImGui_ImplDX11_NewFrame()
 {
     ImGui_ImplDX11_Data* bd = ImGui_ImplDX11_GetBackendData();
+    IM_ASSERT(bd != NULL && "Did you call ImGui_ImplDX11_Init()?");
+
     if (!bd->pFontSampler)
         ImGui_ImplDX11_CreateDeviceObjects();
 }
