@@ -733,6 +733,8 @@ void ImGui_ImplDX12_Shutdown()
 void ImGui_ImplDX12_NewFrame()
 {
     ImGui_ImplDX12_Data* bd = ImGui_ImplDX12_GetBackendData();
+    IM_ASSERT(bd != NULL && "Did you call ImGui_ImplDX12_Init()?");
+
     if (!bd->pPipelineState)
         ImGui_ImplDX12_CreateDeviceObjects();
 }
